# promptview

./: .gitignore  README.md  __init__.py  app.py  app_manager.py  model_implementation_plan.md  model_refactoring_plan.md  model_versioning_plan.md  pytest.ini  server.py  setup.py
__tests__/: agent_utils.py  client_test.py  interpreter_test.py  jinja_formatter_test.py  message_test.py  rendering_test.py  test_agent_utils.py  test_artifact_log2.py  test_block_parser2.py  test_block_usage.py  test_message_api.py  test_messages.py  test_user_api.py  test_user_manager.py  utils.py
agent/: action_agent.py  agent_router.py  base_agent.py  handlers.py
app/: main.py  main2.py  test_agent.py  test_migration_models.py  test_models.py  user_model.py
docs/: artifact_log_api.md  message_api_spec.md  model.md  session_api.md  user_api.md
examples/: model2_example.py  model2_relation_example.py  model2_repo_example.py  style_example.py
llms/: __init__.py  anthropic_llm.py  azure_llm.py  context.py  exceptions.py  interpreter.py  llm.py  llm2.py  messages.py  openai_llm.py  phi_llm.py  prompt_tracer.py  tracer.py  tracer_api.py  types.py
nlp/: language_detection.py
parsers/: __init__.py  xml_parser.py
prompt/: base_prompt.py  chat_prompt.py  components.py  decorator.py  execution_context.py  map.py  mvc.py  mvc_render.py  prompt.py  types.py  view_block.py  view_builder.py  view_decorator.py
promptview/: README.md  __init__.py  app.py  app_manager.py  resource_manager.py
services/socket_manager/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
(+523 files in other folders)
